force-app/main/default/objects/Subscription_History_Snapshot__c/fields/Change_Other_1__c.field-meta.xml
<CustomField>
    <fullName>Change_Other_1__c</fullName>
    <formula>OR(
  CSM_Health_Change_Code__c=&quot;Blank to Blank&quot;,
  CSM_Health_Change_Code__c=&quot;Blank to A&quot;,
  CSM_Health_Change_Code__c=&quot;Blank to B&quot;,
  CSM_Health_Change_Code__c=&quot;Blank to E&quot;,
  CSM_Health_Change_Code__c=&quot;Blank to New&quot;,
  CSM_Health_Change_Code__c=&quot;A to Blank&quot;,
  CSM_Health_Change_Code__c=&quot;A to A&quot;,
  CSM_Health_Change_Code__c=&quot;A to E&quot;
)</formula>
    <label>Change Other (1)?</label>
    <type>Checkbox</type>
</CustomField>