force-app/main/default/objects/Subscription_History_Snapshot__c/fields/CSM_Health_Change__c.field-meta.xml
<CustomField>
    <fullName>CSM_Health_Change__c</fullName>
    <label>CSM Health Change</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Improved</fullName>
                <color>#009900</color>
                <label>Improved</label>
            </value>
            <value>
                <fullName>Regressed</fullName>
                <color>#CC0000</color>
                <label>Regressed</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <color>#999999</color>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>